--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tags-input"
   ],
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "prepublish": "grunt build --force"
   },
   "main": "build/ng-tags-input.min.js",
   "dependencies": {},
