--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "author": {
-    "name": "Michael Benford",
-    "email": "michael@michaelbenford.net"
-  },
-  "name": "ng-tags-input",
+  "name": "vc-tags-input",
   "prettyName": "ngTagsInput",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "Tags input directive for AngularJS",
   "license": "MIT",
-  "homepage": "http://mbenford.github.io/ngTagsInput",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mbenford/ngTagsInput.git"
+    "url": "https://github.com/verge/verge-tags-input.git"
   },
   "bugs": {
-    "url": "https://github.com/mbenford/ngTagsInput/issues"
+    "url": "https://github.com/verge/verge-tags-input/issues"
   },
   "keywords": [
     "angular",
@@ -22,8 +17,7 @@
     "tags-input"
   ],
   "scripts": {
-    "test": "grunt test",
-    "prepublish": "grunt build --force"
+    "test": "grunt test"
   },
   "main": "build/ng-tags-input.min.js",
   "dependencies": {},
